fix: [PD-320] header logo alignment and price font changes

--- a/src/component/HeaderLogo/HeaderLogo.style.scss
+++ b/src/component/HeaderLogo/HeaderLogo.style.scss
@@ -38,7 +38,7 @@
       width: 119px;
     }
     @include desktop {
-      height: 26.48px;
+      height: 36.48px;
       margin-top: 0;
       padding: 0;
       width: 160px;
