--- a/src/component/HeaderMainSection/HeaderMainSection.style.scss
+++ b/src/component/HeaderMainSection/HeaderMainSection.style.scss
@@ -105,18 +105,18 @@ main {
     display: flex;
     flex: 1;
     order: 1;
-    padding-bottom: 15px;
+    padding-bottom: 25px;
     &_isArabic {
-      padding-bottom: 18px;
+      padding-bottom: 25px;
     }
     padding-right: 20px;
   }
 
   .HeaderLogo {
     order: 0;
-    padding-right: 56px;
+    padding-right: 33px;
     &_isArabic {
-      padding-left: 56px;
+      padding-left: 21px;
       padding-right:0px;
     }
     @include mobile {
@@ -130,7 +130,7 @@ main {
       width: 90%;
     }
   }
-  .searchBlock {
+  #searchBlock {
     margin-right: 25px;
     &_isArabic {
       margin-left: 25px;
@@ -160,6 +160,7 @@ main {
       width: 250px;
       height: 40px;
       margin-bottom : 28px;
+      margin-right: 10px;
 
     }
   }
